# zenyard-ida-public

./: README.md  decompai_stub.py  install_from_ida.py  pyproject.toml
src/decompai_client/: __init__.py  configuration.py
src/decompai_client/decompai_api/: __init__.py  admin_api.py  analytics_api.py  binaries_api.py  user_api.py  web_api.py
src/decompai_client/models/: __init__.py  add_objects_to_current_revision_params.py  address_detail.py  analysis_accepted_event.py  analysis_complete_event.py  analysis_outcome.py  analysis_source.py  analysis_start_event.py  analysis_type.py  binary_details.py  binary_state.py  binary_state_paused.py  binary_state_queued.py  binary_state_ready.py  binary_state_uninitialized.py  binary_status.py  budget.py  copilot_additional_params.py  copilot_clear_requested_event.py  copilot_close_event.py  copilot_config.py  copilot_message_sent_event.py  copilot_open_event.py  copilot_open_source.py  create_link_request.py  (+68 more)
src/decompai_ida/: analytics_task.py  api.py  apply_inferences_task.py  apply_pending_inferences_task.py  ask_initial_questions_task.py  async_utils.py  binary.py  broadcast.py  broadcast_ida_events_task.py  clear_inference_marks_task.py  configuration.py  contact_us_mailto.py  copilot_mcp_server_task.py  copilot_middleware.py  copilot_prompts.py  copilot_runtime.py  copilot_session_notes.py  copilot_task.py  copilot_tools.py  download_inferences_task.py  events.py  fetch_user_config_task.py  fetch_user_plan_task.py  ida_tasks.py  inferences.py  inline_shannon_debug_traces_task.py  lines.py  logger.py  lvars.py  main.py  maintain_tid_to_object_task.py  mcp_server_task.py  messages.py  model.py  monitor_initial_analysis_task.py  object_graph.py  objects.py  plugin.py  poll_server_status_task.py  preprocessing_task.py  (+25 more)
(+18 files in other folders)
