[project]
name = "decompai-ida"
version = "0.0.19"
requires-python = ">=3.9"
dependencies = ["aiohappyeyeballs==2.4.4", "aiohttp==3.11.11", "aiohttp-retry==2.9.1", "aiosignal==1.3.2", "aiostream==0.6.4", "annotated-types==0.7.0", "anyio==4.7.0", "async-timeout==5.0.1", "attrs==24.3.0", "exceptiongroup==1.2.2", "frozenlist==1.5.0", "ida-netnode==3.0", "idna==3.10", "more-itertools==10.5.0", "multidict==6.1.0", "propcache==0.2.1", "pydantic==2.10.4", "pydantic-core==2.27.2", "python-dateutil==2.9.0.post0", "six==1.17.0", "sniffio==1.3.1", "structlog==25.1.0", "typing-extensions==4.12.2", "urllib3==2.3.0", "yarl==1.18.3"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
