[project]
name = "decompai-ida"
version = "0.0.56"
requires-python = ">=3.11"
dependencies = ["aiohappyeyeballs==2.6.1", "aiohttp==3.13.3", "aiohttp-retry==2.9.1", "aiosignal==1.4.0", "annotated-types==0.7.0", "anyio==4.12.1", "attrs==25.4.0", "exceptiongroup==1.3.1", "frozenlist==1.8.0", "ida-netnode==3.0", "idna==3.11", "more-itertools==10.8.0", "msgpack==1.1.2", "multidict==6.7.1", "packaging==26.0", "propcache==0.4.1", "pydantic==2.12.5", "pydantic-core==2.41.5", "pygments==2.19.2", "python-dateutil==2.9.0.post0", "qtpy==2.4.3", "six==1.17.0", "structlog==25.5.0", "typing-extensions==4.15.0", "typing-inspection==0.4.2", "urllib3==2.6.3", "yarl==1.22.0", "zenyard-relay==0.1.2", "zstandard==0.25.0"]

[project.scripts]
analyze_binary = "scripts.analyze_binary:app"
format_logs = "scripts.format_logs:main"
use_existing_inferences = "scripts.use_existing_inferences:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
